update Base64 implementation